# switchinfo

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  admin.py  docker-compose.yml  forms.py  launcher.sh  manage.sh  models.py  optional-requirements-easysnmp.txt  optional-requirements-netsnmp.txt  pyproject.toml  requirements.txt  runtests.py  runtests_aruba.py  runtests_connect.py  setup.py  update_all.sh  urls.py  views.py
.github/workflows/: docker-publish.yml  python-publish.yml  test.yml
SwitchSNMP/: Cisco.py  Extreme.py  SwitchSNMP.py  select.py  utils.py
load_info/: load_interfaces.py  load_mac.py  load_vlan.py  switch_info.py
management/commands/: load_arp.py  load_arp_pfsense.py  load_interfaces_rfc.py  load_mac.py  load_oui.py  load_vlans.py  switch_info.py
switch_info/: gunicorn.conf.py  launcher.sh  manage.py
switch_info/switch_info/: asgi.py  settings.py  urls.py  wsgi.py
switchinfo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
switchinfo/SwitchAPI/: FortinetAPI.py  __init__.py  api_exceptions.py
switchinfo/SwitchSNMP/: ArubaCX.py  ArubaCXREST.py  ArubaVSF.py  Cisco.py  CiscoIOS.py  CiscoIOSXE.py  EasySNMPCompat.py  Extreme.py  Fortinet.py  NetSNMPCompat.py  PfSense.py  Racom.py  SNMPError.py  SNMPVariable.py  SwitchSNMP.py  Westermo.py  __init__.py  exceptions.py  pynetsnmpCompat.py  select.py  utils.py
switchinfo/SwitchSNMP/compat/: SNMPCompat.py
switchinfo/load_info/: __init__.py  load_arp.py  load_interfaces.py  load_mac.py  load_vlan.py  switch_info.py
switchinfo/migrations/: 0001_initial.py  0002_switch_location.py  0003_switchgroup.py  0004_related_name.py  0005_interface_aggregation.py  0006_alter_switch_options_alter_interface_aggregation.py
templates/switchinfo/: base.html  switch.html  switch_table.html  switches.html  vlan.html  vlans_on_switch.html
test_data/snmp_data/: ROV-SW-04.snmprec  ROV-SW-04@1.snmprec  ROV-SW-04@100.snmprec  ROV-SW-04@11.snmprec  ROV-SW-04@12.snmprec  aruba_test.snmprec  cisco.snmprec  extreme.snmprec  lldp_aruba.snmprec  lldp_cisco.snmprec  pfsense.snmprec
tests/: test_connect.py  test_lldp.py  test_load_info.py  test_select_snmp.py  test_settings.py  test_snmp.py  test_value_type.py  test_web.py  tests_aruba.py  tests_cisco_snmp.py  tests_utils.py  urls.py
tests/SwitchSNMP/: snmp_data.py  test_Aruba.py  test_CiscoIOS.py  test_SwitchSNMP.py  test_utils.py
tests/load_info/: LoadInfoCommon.py  test_load_arp.py  test_load_interfaces.py  test_load_mac.py  test_load_vlans.py  test_switch_type.py
tests_unittest/SwitchSNMP/: snmp_data.py  test_Aruba.py  test_CiscoIOS.py  test_SwitchSNMP.py  test_utils.py  test_value_type.py
web/: Dockerfile  apache.conf  launcher.sh
web/config/: config.yml
(+37 files in other folders)
